Added integration doc